<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="menu_settings">Settings</string>
    <string name="sos">SOS</string>
    <string name="police">Police Station</string>
    <string name="emergency_Contact">Emergency \nContact</string>
    <string name="home">Home</string>
    <string name="hospital">Hospital</string>
    <string name="blood_Bank">Blood Bank</string>
    <string name="ambulance">Ambulance</string>
    <string name="emergency">Emergency Nos</string>
    <string name="settings">Settings</string>
    <string name="update">Update Contact \nInformation</string>
    <string name="update_User">Update User \nInformation</string>
    <string name="name">Name </string>
    <string name="enter_name">Enter Your Name</string>
    <string name="number">Phone Number</string>
    <string name="enter_number">10 digit Phone Number</string>
    <string name="updateEM">Update Emergency \nContact</string>
    <string name="cancel">Cancel</string>
    <string name="update_user">Update User \n Information</string>
    <string name="address">Address</string>
    <string name="enter_address">NNNN Street City, State</string>
    <string name="blood_type">Blood Type</string>
    <string name="device_owner">Device Owner</string>
    <string name="guest">Guest</string>
    <string name="guest_name">Enter Guest Name</string>
    <string name="guest_blood_type">Enter Guest Blood Type</string>
    <string name="guest_phone_number">Enter Guest Phone Number</string>
    <string name="preview">Preview</string>
    <string name="save">Save</string>
    <string name="home_address">Home Address</string>
    <string name="enter_home_address">NNNN Street City, State</string>
    <string name="home_phone">Home Phone</string>
    <string name="enter_home_phone">Enter 10 Digit Number</string>
    <string name="emergency_contact">Emergency Contact</string>
    <string name="enter_em">Enter Emergency Contact Name</string>
    <string name="emergency_number">Emergency Contact\'s Number</string>
    <string name="enter_em_number">Enter 10 Digit Emergency Number</string>
    <string name="send">Send</string>
    <string name="enter_blood_type">Enter Blood Type</string>
    <string name="enter_location">Enter Location</string>
    <string name="gps_location">Use GPS for Location</string>
    <string name="location">Location</string>
    <string name="title_activity_maps">Maps</string>
    <string name="action_settings">Settings</string>
    <string name="fire_station">Fire Station</string>
    <string name="title_activity_database">DatabaseActivity</string>
    <string name="title_activity_sqlite_helper">SQLiteHelper</string>
    <string name="format_name">Format: First Last</string>
    <string name="format_address">Format: NNNN Street City, State</string>
    <string name="format_phone_number">Format: nnnnnnn (7 or 10 digit number)</string>
    <string name="format_blood">Format: A+ A- B+ B- AB+ AB- O+ O-</string>
    <string name="select_blood">Blood Type</string>

    <string name="first_resp">First-Responder</string>
    <string name="ad_msg">Your network and gps providers are off. Please enable one of them.</string>
    <string name="network_msg">Please choose between Wi-Fi and Mobile Data</string>
    <string name="hey">Hey</string>
    <string name="trouble">I\'m in trouble. Please come here! location </string>
    <string name="trouble_hospital">I\'m in trouble. Please come to Hospital near location</string>
    <string name="trouble_police">I\'m in trouble. Please come to Police Station near location</string>
    <string name="trouble_fire">I\'m in trouble. It\'s Fire! Please come here! location</string>
    <string name="url">https://www.google.co.in/maps/dir/</string>
    <string name="nearest_hospital">/nearest+hospital</string>
    <string name="nearest_police">/nearest+police+station</string>
    <string name="nearest_fire">/nearest+fire+station</string>
    <string name="fill">Please fill all the details</string>
    <string name="phn">Phone number should be of 10 digits</string>
    <string name="emergency_details">Emergency Details</string>
    <string name="updated">Updated</string>
    <string name="main_ad">Main Details</string>
    <string name="main_tab">Main</string>
    <string name="emergency_tab">Emergency</string>

    <!--Permission Strings-->

    <string name="permission_location_rationale">Emergency Help needs location permission to access this feature.</string>
    <string name="permission_phone_rationale">Emergency Help needs call permission to make calls.</string>
    <string name="permission_storage_rationale">Emergency Help needs permission to access Storage for data.</string>
    <string name="permission_camera_rationale">Emergency Help needs permission to access your phone’s Camera.</string>
    <string name="permission_account_rationale">Emergency Help needs permission to access this feature.</string>
    <string name="permission_sms_rationale">Emergency Help need sms permission to send SMS.</string>

    <string name="permission_dialog_positive">RETRY</string>
    <string name="permission_dialog_negative">I’M SURE</string>

    <string name="permission_dialog_neveragain_message">It looks like you have turned off permissions required for this feature. It can be enabled under Phone Settings > Apps > Emergency Help > Permissions</string>
    <string name="permission_dialog_gotosettings">GO TO SETTINGS</string>

    <string name="permission_location_message">Emergency Help uses this permission to detect your current location. It also enables you to get turn-by-turn driving directions. Are you sure you want to deny this permission?</string>
    <string name="permission_contacts_message">This permission enables you to create an account on Emergency Help using a Google account, or use an existing connection to log in. Are you sure you want to deny this permission?</string>
    <string name="permission_phone_message">Emergency Help uses this permission to call directly without you having to leave the app. Are you sure you want to deny this permission?</string>
    <string name="permission_camera_message">Emergency Help requires this permission to enable the in-app camera. Are you sure you want to deny this permission?</string>
    <string name="permission_storage_message">Emergency Help uses this permission to allow you to upload photos from your Gallery. Are you sure you want to deny this permission?</string>
    <string name="permission_sms_message">Emergency Help uses this permission to send SMS without you having to leave the app. Are you sure you want to deny this permission?</string>

    <string name="permission_location_title">Location Permission Denied</string>
    <string name="permission_camera_title">Camera Access Denied</string>
    <string name="permission_storage_title">Storage Access Denied</string>
    <string name="permission_phone_title">Phone Access Denied</string>
    <string name="permission_contacts_title">Contacts Permission Denied</string>
    <string name="permission_sms_title">SMS Permission Denied</string>


    <string name="hint_ct1">Emergency Contact Name 1</string>
    <string name="hint_ct2">Emergency Contact Name 2</string>
    <string name="note">Note : Leave blank if both details are not be changed. </string>
    <string name="note_main">Note : Leave blank if not to be updated.</string>
    <string name="hint_add">Enter Your Address</string>
    <string name="but_update">Update</string>
    <string name="women">Women Help Line</string>
    <string name="call_100">100</string>
    <string name="call_101">101</string>
    <string name="call_102">102</string>
    <string name="call_1091">1091</string>
    <string name="but_edit_main">Edit Main Details</string>
    <string name="max_chars">10</string>
    <string-array name="blood_array">
        <item>Blood Type</item>
        <item>A-</item>
        <item>A</item>
        <item>A+</item>
        <item>B-</item>
        <item>B</item>
        <item>B+</item>
        <item>O-</item>
        <item>O</item>
        <item>O+</item>
        <item>AB-</item>
        <item>AB</item>
        <item>AB+</item>
    </string-array>

    <string name="app_name">Emergency Help</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_home">Home</string>
    <string name="main">Enter Details</string>
    <string name="title_activity_edit_main_details">Edit Details</string>
    <string name="title_activity_edit_emergency_details">Edit Emergency Details</string>
    <string name="title_activity_sos">Sos</string>
    <string name="title_activity_emergency_contact">Emergency Contact Numbers</string>
    <string name="title_activity_settings">Edit Details</string>


</resources>