<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/pad_20">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:paddingTop="@dimen/activity_horizontal_margin"
            android:text="@string/police"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/black" />


            <info.hoang8f.widget.FButton
                android:id="@+id/police"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="@dimen/fbutton_default_padding_top"
                android:text="@string/call_100"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:textColor="@android:color/white"
                fbutton:buttonColor="@color/colorAccent"
                fbutton:cornerRadius="@dimen/pad_4"
                fbutton:shadowColor="@color/fbutton_color_asbestos"
                fbutton:shadowEnabled="true"
                fbutton:shadowHeight="@dimen/pad_4" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:paddingTop="@dimen/activity_horizontal_margin"
            android:text="@string/fire_station"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/black" />


            <info.hoang8f.widget.FButton
                android:id="@+id/fire"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="@dimen/fbutton_default_padding_top"
                android:text="@string/call_101"
                android:textColor="@android:color/white"
                fbutton:buttonColor="@color/colorAccent"
                fbutton:cornerRadius="@dimen/pad_4"
                fbutton:shadowColor="@color/fbutton_color_asbestos"
                fbutton:shadowEnabled="true"
                fbutton:shadowHeight="@dimen/pad_4" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:paddingTop="@dimen/activity_horizontal_margin"
            android:text="@string/ambulance"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/black" />


            <info.hoang8f.widget.FButton
                android:id="@+id/ambulance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="@dimen/fbutton_default_padding_top"
                android:text="@string/call_102"
                android:textColor="@android:color/white"
                fbutton:buttonColor="@color/colorAccent"
                fbutton:cornerRadius="@dimen/pad_4"
                fbutton:shadowColor="@color/fbutton_color_asbestos"
                fbutton:shadowEnabled="true"
                fbutton:shadowHeight="@dimen/pad_4" />


    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:paddingTop="@dimen/activity_horizontal_margin"
            android:text="@string/women"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/black" />


            <info.hoang8f.widget.FButton
                android:id="@+id/women"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="@dimen/fbutton_default_padding_top"
                android:text="@string/call_1091"
                android:textColor="@android:color/white"
                fbutton:buttonColor="@color/colorAccent"
                fbutton:cornerRadius="@dimen/pad_4"
                fbutton:shadowColor="@color/fbutton_color_asbestos"
                fbutton:shadowEnabled="true"
                fbutton:shadowHeight="@dimen/pad_4" />

    </RelativeLayout>
</LinearLayout>