<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/pad_20"
    android:paddingRight="@dimen/pad_20"
    android:paddingTop="@dimen/pad_20">


    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/home_address_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/home_address"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelTextSize="@dimen/activity_horizontal_margin"
        app:met_primaryColor="@color/colorAccent" />


    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/home_phone_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:hint="@string/home_phone"
        android:inputType="phone"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelTextSize="@dimen/activity_horizontal_margin"
        app:met_maxCharacters="10"
        app:met_primaryColor="@color/colorAccent" />


        <info.hoang8f.widget.FButton
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/pad_20"
            android:gravity="center"
            android:id="@+id/update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/but_update"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            fbutton:buttonColor="@color/colorAccent"
            fbutton:cornerRadius="@dimen/pad_4"
            fbutton:shadowColor="@color/fbutton_color_asbestos"
            fbutton:shadowEnabled="true"
            fbutton:shadowHeight="@dimen/pad_4" />


    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/pad_20"
        android:text="@string/note_main"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/black" />

</LinearLayout>