<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/home_address" />


        <EditText
            android:id="@+id/home_address_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="Enter Your Address"
            android:singleLine="true"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/home_phone"
            android:textSize="12sp" />


        <EditText
            android:id="@+id/home_phone_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_home_phone"
            android:inputType="phone"
            android:textColor="@android:color/white" />

        <com.andexert.library.RippleView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:gravity="center">

            <info.hoang8f.widget.FButton
                android:id="@+id/button1"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fbutton_default_padding_top"
                android:text="Update"
                fbutton:buttonColor="@color/colorAccent"
                fbutton:cornerRadius="5dp"
                fbutton:shadowColor="@color/fbutton_color_asbestos"
                fbutton:shadowEnabled="true"
                fbutton:shadowHeight="5dp" />

        </com.andexert.library.RippleView>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Note : Leave blank if not to be updated"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>
</LinearLayout>