<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    android:layout_height="fill_parent" >
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginTop="20dp"
    >
      <TextView
            android:text="@string/emergency_contact"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="left"
            />
        
    	<EditText 
        	android:id="@+id/Emergency_contacts_name"
        	android:singleLine="true"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:hint="Enter Emergency Contact Name 1"
        	android:textColor="@android:color/white"
        	android:layout_marginBottom="20dp"/>
    
		<TextView
            android:text="@string/emergency_number"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="left"/>
        
        <EditText
            android:id="@+id/Emergency_contacts_number1"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="phone"
            android:hint="@string/enter_em_number"
            android:textColor="@android:color/white"
            android:textSize="19sp"
            android:layout_marginBottom="10dp"/>
        <TextView
            android:text="@string/emergency_contact"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="left"/>
            
             
        
    	
    	<EditText 
        	android:id="@+id/Emergency_contacts_name2"
        	android:singleLine="true"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:hint="Enter Emergency Contact Name 2"
        	android:textColor="@android:color/white"
        	android:layout_marginBottom="20dp"/>
    	<TextView
            android:text="@string/emergency_number"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="left"/>
        <EditText
            android:id="@+id/Emergency_contacts_number2"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="phone"
            android:hint="@string/enter_em_number"
            android:textColor="@android:color/white"
            android:textSize="19sp"/>


    <com.andexert.library.RippleView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:gravity="center"
        >

        <info.hoang8f.widget.FButton
            android:id="@+id/button1"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fbutton:buttonColor="@color/colorAccent"
            fbutton:shadowColor="@color/fbutton_color_asbestos"
            fbutton:shadowEnabled="true"
            fbutton:shadowHeight="5dp"
            fbutton:cornerRadius="5dp"
            android:text="Update"
            android:layout_marginTop="@dimen/fbutton_default_padding_top"
            android:layout_alignParentRight="true"/>

    </com.andexert.library.RippleView>
        <TextView
            android:id="@+id/textView1"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Note : Leave blank if both contacts are not be changed. "
            android:textAppearance="?android:attr/textAppearanceMedium" />

</LinearLayout>
</LinearLayout>